--- a/swarajhotel/src/main/resources/application.properties
+++ b/swarajhotel/src/main/resources/application.properties
@@ -10,3 +10,14 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
+# ========== Cloudinary ==========
+cloudinary.cloud.name=${CLOUDINARY_NAME:dgolpgyl4}
+cloudinary.api.key=${CLOUDINARY_API_KEY:768324912657793}
+cloudinary.api.secret=${CLOUDINARY_API_SECRET:afGQjHAHiNDZyk7yP5iIWWmPvwo}
+
+
+
+
+#THE MAXIMUM SIGN OF IMAGE THAT CAN BE UPLOADED
+spring.servlet.multipart.max-file-size=2GB
+spring.servlet.multipart.max-request-size=2GB
